--- a/GradientDemo/GradientDemo/ProgressViewController.xib
+++ b/GradientDemo/GradientDemo/ProgressViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProgressViewController">
             <connections>
                 <outlet property="progressView2" destination="75P-iu-W9B" id="HZE-Kx-IEV"/>
+                <outlet property="slider" destination="bUn-1a-Ll3" id="F1U-Zs-w6o"/>
                 <outlet property="view" destination="AgO-yA-U9g" id="Lu1-dl-ml6"/>
             </connections>
         </placeholder>
